1999-03-16  Linus Nordberg  <linus.nordberg@canit.se>

	* make.bat: Compile mpz/urandomc and mpf/urandom.c

1999-03-15  Linus Nordberg  <linus.nordberg@canit.se>

	* mpz/urandom.c	(gmp_rand_init): New function.
	(gmp_rand_clear): New function.
	(mpz_urandomb): New function.

	* mpz/Makefile.in: Compile urandom.c

	* mpf/urandom.c (mpf_urandomb): New function.
	
	* mpf/Makefile.in: Compile urandom.c.

	* gmp.h (__gmp_rand_state_struct, __gmp_rand_scheme_struct): New
	structs for randomization functions.
	(gmp_rand_dist, gmp_rand_alogrithm): New enums for randomization
	functions.
	(mpz_urandomb, mpf_urandomb): Add prototype.
	(gmp_rand_init, gmp_rand_clear): Add prototype.

1999-03-15  Torbjorn Granlund  <tege@matematik.su.se>

	* .gdbinit: New file.

	* mpz/dump.c: New file.
	* mpz/Makefile.in: Compile dump.c.
	* make.bat: Likewise.
	* gmp.h (mpz_dump): Declare.

1999-03-14  Torbjorn Granlund  <tege@matematik.su.se>

	* mpz/tests/reuse.c: Also test mpz_invert and mpz_divexact.

	* mpz/tests/convert.c: Update to GMP 2 variable syntax.

1999-03-13  Torbjorn Granlund  <tege@matematik.su.se>

	* mpf/README: New file.
	* mpz/README: New file.

	* mpf/pow_ui.c: New file.
	* mpf/Makefile.in: Compile pow_ui.c.
	* make.bat: Likewise.
	* gmp.h (mpf_pow_ui): Declare.

1999-03-12  Torbjorn Granlund  <tege@matematik.su.se>

	* mpn/configure.in: Stage 1 of rewrite.
	* mpn/underscore.h: New name for bsd.h.
	* mpn/sysv.h: Deleted.

	* mpn/m68k/*: Don't include sysdep.h.

1999-03-11  Torbjorn Granlund  <tege@matematik.su.se>

	* mpn/powerpc32/add_n.S: Add support for both AIX and ELF syntax.
	Renamed from `.s'.
	* mpn/powerpc32/sub_n.S: Likewise.
	* mpn/powerpc32/lshift.S: Likewise.
	* mpn/powerpc32/rshift.S: Likewise.
	* mpn/powerpc32/mul_1.S: Likewise.
	* mpn/powerpc32/addmul_1.S: Likewise.
	* mpn/powerpc32/submul_1.S: Likewise.

	* mpn/powerpc32/umul.S: New file.
	* mpn/sparc32/v8/umul.S: New file.
	* mpn/sparc32/umul.S: New file.
	* mpn/x86/umul.S: New file.